SERVER-90050: Make bulkWrite not send all nsInfo in child batches (#22320)

GitOrigin-RevId: 055bcec05d0ae5b58681be45ec55df4fee6b79df